--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>mark joshwel</title>
+    <title>mark's redirects</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="hi!">
     <style>
@@ -9,7 +9,7 @@
     </style>
 </head>
 <body>
-    <h1>mark's links</h1>
+    <h1>mark's redirects</h1>
     <p>
         if you're here, you probably entered the link wrongly.
     </p>
