--- a/jetstar.html
+++ b/jetstar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>mark's redirect</title>
+    <title>mark's redirects</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="hi!">
     <style>
