links: update jetstar

--- a/jetstar.html
+++ b/jetstar.html
@@ -3,17 +3,17 @@
 <head>
     <title>mark's redirects</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="hi!">
+    <meta name="description" content="link redirects for joshwel.co">
     <style>
         body { font-family: sans-serif }
     </style>
   <meta http-equiv="Refresh" content="0; url='https://play.google.com/store/apps/details?id=com.ink.jetstar.mobile.app'" />
 </head>
 <body>
-    <h1>mark's links</h1>
+    <h1>links.joshwel.co</h1>
     <p>
         redirecting you to <a href="https://play.google.com/store/apps/details?id=com.ink.jetstar.mobile.app">https://play.google.com/store/apps/details?id=com.ink.jetstar.mobile.app</a> soon. if that doesn't work, click the link!
     </p>
     <hr>
-    <p><a href="https://joshwel.co">with all my heart, 2023.</a></p>
+    <p><a href="https://joshwel.co">redirecting you with all my heart, 2023.</a></p>
 </body>
