--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <title>mark's redirects</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="hi!">
+    <meta name="description" content="link redirects for joshwel.co">
     <style>
         body { font-family: sans-serif }
     </style>
+  <meta http-equiv="Refresh" content="0; url='http://joshwel.co'" />
 </head>
 <body>
-    <h1>mark's redirects</h1>
+    <h1>links.joshwel.co</h1>
     <p>
-        if you're here, you probably entered the link wrongly.
+        you're not supposed to be here! incorrect link maybe?<br>
+        redirecting you to <a href="http://joshwel.co">http://joshwel.co</a> soon. if that doesn't work, click the link!
     </p>
     <hr>
-    <p><a href="https://joshwel.co">with all my heart, 2023.</a></p>
+    <p><a href="https://joshwel.co">redirecting you with all my heart, 2023.</a></p>
 </body>
