--- a/404.html
+++ b/404.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>mark's redirects</title>
+    <title>404!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="hi!">
+    <meta name="description" content="link redirects for joshwel.co">
     <style>
         body { font-family: sans-serif }
     </style>
+  <meta http-equiv="Refresh" content="0; url='http://joshwel.co'" />
 </head>
 <body>
-    <h1>404!</h1>
+    <h1>links.joshwel.co</h1>
     <p>
+        404! there's nothing here.<br>
         if you're here, you probably entered the link wrongly.
     </p>
     <hr>
-    <p><a href="https://joshwel.co">with all my heart, 2023.</a></p>
+    <p><a href="https://joshwel.co">redirecting you with all my heart, 2023.</a></p>
 </body>
