links: update vscp link

--- a/vcsp.html
+++ b/vcsp.html
@@ -7,12 +7,12 @@
     <style>
         body { font-family: sans-serif }
     </style>
-  <meta http-equiv="Refresh" content="0; url='http://vcsp.joshwel.co'" />
+  <meta http-equiv="Refresh" content="0; url='https://poissonparler.notion.site/CSP-Shared-Virtual-Machine-vCSP-a90b2979f503454da519b7e945c09c11'" />
 </head>
 <body>
     <h1>links.joshwel.co</h1>
     <p>
-        redirecting you to <a href="http://vcsp.joshwel.co">http://vcsp.joshwel.co</a> soon. if that doesn't work, click the link!
+        redirecting you to <a href="https://poissonparler.notion.site/CSP-Shared-Virtual-Machine-vCSP-a90b2979f503454da519b7e945c09c11">https://poissonparler.notion.site/CSP-Shared-Virtual-Machine-vCSP-a90b2979f503454da519b7e945c09c11</a> soon. if that doesn't work, click the link!
     </p>
     <hr>
     <p><a href="https://joshwel.co">redirecting you with all my heart, 2023.</a></p>
